--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  {
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^4.0.0",
+    "typescript": "^5.0.0"
+  }
+}
+
+   "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
