--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
-{
-  "version": 2,
-  "builds": [
-    { "src": "client/vite.config.ts", "use": "@vercel/vite" },
-    { "src": "api/**/*.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.ts" },
-    { "src": "/(.*)", "dest": "/client/index.html" }
-  ]
+{ 
+  "rewrites":[ 
+      {"source":"/(.*)", "destination":"/"} 
+  ] 
 }
